# VulnClaw

./: .env.example  .vulnclaw-scope.example.yaml  .vulnclaw-scope.yaml  CONTRIBUTING.md  DOCKER.md  README.md  README_EN.md  SECURITY.md  TUTORIAL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/src/i18n/: index.tsx
tests/: test_agent.py  test_agent_context_protocol.py  test_audit_wiring.py  test_builtin_tools.py  test_chat_tool_loop.py  test_chatgpt_proxy.py  test_cli.py  test_cli_security.py  test_config.py  test_file_tools.py  test_finding_similarity.py  test_kb.py  test_llm_failover.py  test_loop_reflexion_integration.py  test_mcp.py  test_mcp_lifecycle.py  test_reasoning_prompt_context.py  test_reasoning_state.py  test_recon_tools.py  test_reflexion.py  test_report.py  test_safety_approval.py  test_safety_audit.py  test_safety_budget.py  test_safety_credentials.py  test_safety_redaction.py  test_safety_sandbox.py  test_safety_scope.py  test_scope_enforcement.py  test_skills.py  test_solver.py  test_stream_robustness.py  test_system_prompt_constraints.py  test_token_counter.py  test_token_provider.py  test_tool_parallel.py  test_verifier.py  test_web.py
vulnclaw/: __init__.py
vulnclaw/agent/: agent_context.py  anti_loop.py  blackboard.py  builtin_tools.py  chatgpt_proxy.py  constraint_policy.py  context.py  core.py  ctf_mode.py  file_tools.py  finding_parser.py  finding_similarity.py  input_analysis.py  kb_context.py  llm_client.py  loop_controller.py  prompt_context.py  prompts.py  reasoning_state.py  recon_tools.py  recon_tracker.py  reflexion.py  runtime_state.py  solver.py  system_prompt.py  token_counter.py  tool_call_manager.py
vulnclaw/cli/: main.py  manual.py  tui.py  tui_textual.py
vulnclaw/config/: schema.py  settings.py  token_provider.py
vulnclaw/i18n/: __init__.py  en.json  zh.json
vulnclaw/intel/: attack.py  compliance.py  cve.py  findings.py  osint.py  remediation.py  tools.py  topology.py
vulnclaw/kb/: retriever.py  updater.py
vulnclaw/mcp/: lifecycle.py  router.py
vulnclaw/plugins/: integration.py
vulnclaw/report/: filter.py  generator.py  pdf_exporter.py  poc_builder.py  verifier.py
vulnclaw/safety/: __init__.py  approval.py  audit.py  budget.py  credentials.py  redaction.py  sandbox.py  scope.py
vulnclaw/skills/: crypto_tools.py  dispatcher.py  loader.py
vulnclaw/skills/core/: exploitation.md  pentest-flow.md  post-exploitation.md  recon.md  reporting.md  vuln-discovery.md  waf-bypass.md
vulnclaw/skills/specialized/ai-mcp-security/: SKILL.md
vulnclaw/skills/specialized/ai-mcp-security/references/: 04-ai-and-mcp-security-integrated.md
vulnclaw/skills/specialized/android-pentest/: SKILL.md
vulnclaw/skills/specialized/client-reverse/: SKILL.md
vulnclaw/skills/specialized/crypto-toolkit/: SKILL.md
vulnclaw/skills/specialized/crypto-toolkit/references/: crypto-attacks.md  encoding-cheatsheet.md
vulnclaw/skills/specialized/ctf-crypto/: SKILL.md
vulnclaw/skills/specialized/ctf-crypto/references/: rsa-attacks-cheatsheet.md
vulnclaw/skills/specialized/ctf-misc/: SKILL.md
vulnclaw/skills/specialized/ctf-web/: SKILL.md
vulnclaw/skills/specialized/ctf-web/references/: command-injection-bypass.md  php-bypass-cheatsheet.md  source-code-extraction.md
vulnclaw/skills/specialized/cve-triage/: SKILL.md
vulnclaw/skills/specialized/cve-triage/references/: cve-triage-workflow.md
vulnclaw/skills/specialized/intranet-pentest-advanced/: SKILL.md
vulnclaw/skills/specialized/intranet-pentest-advanced/references/: 06-intranet-and-host-operations-integrated.md  intranet-playbook-04-privilege-escalation.md
vulnclaw/skills/specialized/osint-recon/: SKILL.md
vulnclaw/skills/specialized/osint-recon/references/: osint-toolkit.md  social-engineering-intel.md  web-fingerprinting.md  website-recon.md
vulnclaw/skills/specialized/pentest-tools/: SKILL.md
vulnclaw/skills/specialized/rapid-checklist/: SKILL.md
vulnclaw/skills/specialized/secknowledge-skill/: SKILL.md
vulnclaw/skills/specialized/web-pentest/: SKILL.md
vulnclaw/skills/specialized/web-security-advanced/: SKILL.md
vulnclaw/target_state/: planner.py  store.py
vulnclaw/warstories/: 2026-04-19_php-deserialization_regex-bypass.md  2026-04-19_php-weak-comparison_double-write-md5-bypass.md  README.md
vulnclaw/web/services/: provider_service.py
vulnclaw/web/static/: index.html
(+4 files in other folders)
